force-app/main/default/objects/PDRI__Salesforce_Work_Item_Mapping__c/PDRI__Salesforce_Work_Item_Mapping__c.object-meta.xml
<CustomObject>
    <label>Prodly Salesforce Work Item Mapping</label>
    <nameField>
        <displayFormat>WI-Mapping-{0}</displayFormat>
        <label>Salesforce Work Item Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prodly Salesforce Work Item Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>