force-app/main/default/objects/PDRI__Salesforce_Work_Item_Mapping__c/fields/PDRI__Object_Label__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Object_Label__c</fullName>
    <label>Object Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>