force-app/main/default/objects/PDRI__Salesforce_Work_Item_Mapping__c/fields/PDRI__Status_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Status_Field_Name__c</fullName>
    <label>Status Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>